# pomodoro_app

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
qml/: Main.qml
